Closed Bug 827436 Opened 12 years ago Closed 12 years ago

js/src/shell/js.cpp:4733: warning: 'int OptionFailure(const char*, const char*)' defined but not used

Categories

(Core :: JavaScript Engine, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: dholbert, Assigned: dholbert)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building gecko for B2G, I got this build warning:
{
js/src/shell/js.cpp:4733: warning: 'int OptionFailure(const char*, const char*)' defined but not used
}

Looks like this function is defined unconditionally, but it's only called in an #if defined(JS_ION) chunk, as shown by this cset which added the function:
https://hg.mozilla.org/mozilla-central/diff/8db8eef79b8c/js/src/shell/js.cpp

I think we should just #ifdef-guard the function definition.
Blocks: buildwarning
Attached patch fix v1Splinter Review
Assignee: general → dholbert
Status: NEW → ASSIGNED
Attachment #698798 - Flags: review?(dvander)
Attachment #698798 - Flags: review?(dvander) → review+
https://hg.mozilla.org/mozilla-central/rev/36a681f8f124
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: