Bug 827436: In js.cpp, add #ifdef guard around OptionFailure() definition, since its callers are all #ifdef-guarded. r=dvander